not a whole lot of anything

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,8 @@
 add more features - ideally modular. :3 
 
-add comufusion matrix and r^2
-
-
 i want a script that lets me specify, features, sleep stage, hormone type
 possibly also ? -> loss function and optimiser ?
+
+implement seperate loss class, can be used for training + evaluation.
+
+need to normalise all my labels so i can do multi reggresion ! 
