--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,1 @@
-implement frontend
-
-use validation set for loss ?
-
-r2 isnt that good as my labels have no variance ? 
-is my scalar loss okay for multi output?
-
-
-19x15000 - > 19x19 x 5
+create a massive scan and try find bets params with the most positive r2 values 
